# RTCW-SP

./: .gitignore  CMakeLists.txt  Readme.md  g_save.h
notes/: animModels.md
src/botai/: ai_chat.c  ai_chat.h  ai_cmd.c  ai_cmd.h  ai_dmnet.c  ai_dmnet.cpp  ai_dmnet.h  ai_dmq3.c  ai_dmq3.cpp  ai_dmq3.h  ai_main.c  ai_main.cpp  ai_main.h  ai_team.c  botai.h  botai_local.h
src/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_bspq3.cpp  be_aas_cluster.c  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.cpp  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.c  be_aas_file.cpp  be_aas_file.h  be_aas_main.c  be_aas_main.cpp  be_aas_main.h  be_aas_move.c  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.c  be_aas_reach.c  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.c  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.cpp  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.c  be_ai_char.cpp  (+36 more)
src/bspc/: aas_cfg.c  aas_create.c  be_aas_bspc.c  l_bsp_hl.c  l_bsp_q3.c  l_cmd.c  map_q1.c
src/cgame/: cg_consolecmds.c  cg_consolecmds.cpp  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_effects.c  cg_effects.cpp  cg_ents.c  cg_ents.cpp  cg_event.c  cg_event.cpp  cg_flamethrower.c  cg_flamethrower.cpp  cg_info.c  cg_info.cpp  cg_local.h  cg_localents.c  cg_localents.cpp  cg_main.c  cg_main.cpp  cg_marks.c  cg_marks.cpp  cg_newDraw.c  cg_newDraw.cpp  cg_particles.c  cg_particles.cpp  cg_players.c  cg_players.cpp  cg_playerstate.c  cg_playerstate.cpp  cg_predict.c  cg_predict.cpp  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_servercmds.cpp  cg_snapshot.c  cg_snapshot.cpp  cg_sound.c  (+9 more)
src/client/: cl_cgame.c  cl_cgame.cpp  cl_cin.c  cl_cin.cpp  cl_console.c  cl_console.cpp  cl_input.c  cl_input.cpp  cl_keys.c  cl_keys.cpp  cl_main.c  cl_main.cpp  cl_net_chan.c  cl_net_chan.cpp  cl_parse.c  cl_parse.cpp  cl_scrn.c  cl_scrn.cpp  cl_ui.c  cl_ui.cpp  client.h  keys.h  snd_adpcm.cpp  snd_dma.c  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_public.h  snd_wavelet.cpp
src/extractfuncs/: l_precomp.c  l_script.c
src/game/: ai_cast.c  ai_cast.cpp  ai_cast.h  ai_cast_characters.c  ai_cast_characters.cpp  ai_cast_debug.c  ai_cast_debug.cpp  ai_cast_events.c  ai_cast_events.cpp  ai_cast_fight.c  ai_cast_fight.cpp  ai_cast_func_attack.c  ai_cast_func_attack.cpp  ai_cast_func_boss1.c  ai_cast_func_boss1.cpp  ai_cast_funcs.c  ai_cast_funcs.cpp  ai_cast_global.h  ai_cast_script.c  ai_cast_script.cpp  ai_cast_script_actions.c  ai_cast_script_actions.cpp  ai_cast_script_ents.c  ai_cast_script_ents.cpp  ai_cast_sight.c  ai_cast_sight.cpp  ai_cast_think.c  ai_cast_think.cpp  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_animation.c  bg_animation.cpp  bg_local.h  bg_misc.c  (+67 more)
src/idLib/: idLib.h
src/idlib/bv/: Bounds.cpp  Bounds.h  Sphere.cpp  Sphere.h
src/idlib/math/: Angles.cpp  Angles.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quat.cpp  Quat.h  Rotation.cpp  Rotation.h  Simd.cpp  Simd.h  Simd_Generic.cpp  Simd_Generic.h  Simd_SSE.cpp  Vector.cpp  Vector.h
src/macosx/: Q3Controller.m  macosx_display.m  macosx_glimp.m  macosx_input.m  macosx_local.h  macosx_sndcore.m  macosx_sys.m
src/qcommon/: clip_model.cpp  clip_model.h  cm_load.c  cm_load.cpp  cm_local.h  cm_patch.c  cm_patch.cpp  cm_patch.h  cm_polylib.c  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.c  cm_test.cpp  cm_trace.c  cm_trace.cpp  cmd.c  cmd.cpp  common.c  common.cpp  cvar.c  cvar.cpp  entity_state.h  files.c  files.cpp  huffman.c  huffman.cpp  md4.c  md4.cpp  msg.c  msg.cpp  net_chan.c  net_chan.cpp  qcommon.h  qfiles.h  unzip.c  unzip.cpp  unzip.h  vm.c  vm_interpreted.c  (+1 more)
src/renderer/: qgl.h  tr_animation.c  tr_animation.cpp  tr_backend.c  tr_backend.cpp  tr_bsp.c  tr_bsp.cpp  tr_cmds.c  tr_cmds.cpp  tr_cmesh.c  tr_cmesh.cpp  tr_curve.c  tr_curve.cpp  tr_flares.c  tr_flares.cpp  tr_font.c  tr_font.cpp  tr_image.c  tr_image.cpp  tr_init.c  tr_init.cpp  tr_light.c  tr_light.cpp  tr_local.h  tr_local_null.cpp  tr_main.c  tr_main.cpp  tr_marks.cpp  tr_mesh.c  tr_mesh.cpp  tr_model.c  tr_model.cpp  tr_public.h  tr_scene.c  tr_scene.cpp  tr_shade.c  tr_shade.cpp  tr_shade_calc.c  tr_shade_calc.cpp  tr_shader.c  (+8 more)
src/sdl/: sdl_gamma.cpp  sdl_glimp.c  sdl_glimp.cpp  sdl_input.c  sdl_input.cpp  sdl_main.c  sdl_main.cpp  sdl_null.c  sdl_null.cpp  sdl_snd.c  sdl_snd.cpp  sdl_sys.c  sdl_sys.cpp
src/server/: server.h  sv_bot.c  sv_bot.cpp  sv_ccmds.c  sv_ccmds.cpp  sv_client.c  sv_client.cpp  sv_game.c  sv_game.cpp  sv_init.c  sv_init.cpp  sv_main.c  sv_main.cpp  sv_net_chan.c  sv_net_chan.cpp  sv_snapshot.c  sv_snapshot.cpp  sv_world.c  sv_world.cpp  world.cpp  world.h
src/splines/: math_angles.h  math_matrix.h  math_vector.cpp  math_vector.h  q_parse.cpp  q_shared.cpp  q_splineshared.h  splines.cpp  splines.h  splines_camera.h  util_list.h  util_str.cpp  util_str.h
src/ui/: keycodes.h  ui_atoms.c  ui_atoms.cpp  ui_gameinfo.c  ui_local.h  ui_main.c  ui_main.cpp  ui_players.c  ui_public.h  ui_shared.c  ui_shared.cpp  ui_shared.h  ui_syscalls.c
tests/: CMakeLists.txt
tests/server/: world_test.cpp
